# soyac

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  README.txt  SConstruct  Vagrantfile
CMakeScripts/: FindLLVM.cmake.bak
data/: soya.lang  soyac.xml
doc/langref/: 01_introduction.xml  02_compilation.xml  03_grammars.xml  04_lexical_structure.xml  05_types.xml  06_conversions.xml  07_names.xml  08_expressions.xml  09_statements.xml  10_modules_and_packages.xml  11_functions.xml  18_variables.xml  appA_binary_compatibility.xml  book.xml
doc/langref/html/: ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch07.html  ch08.html  index.html  langref.css  pr01.html
doc/langref/xslt/: xhtml.xsl
runtime/: CMakeLists.txt  __core__.soyi  libsr.c
src/: CMakeLists.txt
src/analysis/: BasicAnalyzer.cpp  BasicAnalyzer.h  BasicAnalyzer.hpp  ControlFlowAnalyzer.cpp  ControlFlowAnalyzer.h  ControlFlowAnalyzer.hpp  FunctionGroup.cpp  FunctionGroup.h  FunctionGroup.hpp  ModulesRequiredException.h  ModulesRequiredException.hpp  NavigatingVisitor.cpp  NavigatingVisitor.h  NavigatingVisitor.hpp  SymbolTable.cpp  SymbolTable.h  SymbolTable.hpp
src/ast/: ArrayCreationExpression.cpp  ArrayCreationExpression.h  ArrayCreationExpression.hpp  ArrayType.cpp  ArrayType.h  ArrayType.hpp  AssignmentExpression.cpp  AssignmentExpression.h  AssignmentExpression.hpp  Block.cpp  Block.h  Block.hpp  BooleanLiteral.cpp  BooleanLiteral.h  BooleanLiteral.hpp  BooleanType.cpp  BooleanType.h  BooleanType.hpp  BuiltInType.cpp  BuiltInType.h  BuiltInType.hpp  CallExpression.cpp  CallExpression.h  CallExpression.hpp  CastExpression.cpp  CastExpression.h  CastExpression.hpp  CharacterLiteral.cpp  CharacterLiteral.h  CharacterLiteral.hpp  CharacterType.cpp  CharacterType.h  CharacterType.hpp  ClassType.cpp  ClassType.h  ClassType.hpp  CombinedRelationalExpression.cpp  CombinedRelationalExpression.h  CombinedRelationalExpression.hpp  CompoundAssignmentExpression.cpp  (+223 more)
src/codegen/: CodeGenerator.cpp  CodeGenerator.h  CodeGenerator.hpp  LLVMTypeMapper.cpp  LLVMTypeMapper.h  LLVMTypeMapper.hpp  LLValueExpression.cpp  LLValueExpression.h  LLValueExpression.hpp  mangling.cpp  mangling.h
src/common/: PassResult.cpp  PassResult.h  PassResult.hpp  PassResultBuilder.cpp  PassResultBuilder.h  PassResultBuilder.hpp  Problem.cpp  Problem.h  Problem.hpp
src/driver/: FileProcessor.cpp  FileProcessor.h  FileProcessor.hpp  ProblemReport.cpp  ProblemReport.h  ProblemReport.hpp  config.cpp  config.h  config.hpp  link.cpp  link.h  link.hpp  main.cpp
src/parser/: Lexer.cpp  Lexer.h  Lexer.hpp  ParserDriver.cpp  ParserDriver.h  ParserDriver.hpp  location.hh  parser.h  parser.hpp  position.hh  soya.y  soya.yy  stack.hh
test/: CMakeLists.txt  test-soyac.cpp
test/torture/basic/: block_scope.soya
test/torture/basic/conversions/: float_to_float.soya  float_to_int.soya  int_to_float.soya  int_to_int.soya
test/torture/basic/expressions/: assignment.soya  compound_assignment.soya  logical_ops.soya
test/torture/basic/functions/: arguments.soya  global_var_access.soya  return_values.soya  struct_arguments.soya  struct_return_values.soya
test/torture/basic/modules/: entity_imports.soya  module_imports.soya  static_module_imports.soya
test/torture/basic/modules/samples/: bar.soya  foo.soya
test/torture/basic/properties/: struct_instance_properties.soya
test/torture/basic/statements/: do.soya  for.soya  if_dangling_else.soya  while.soya
test/torture/basic/types/arrays/: element_assignment.soya  init.soya
test/torture/basic/types/class/: constructors.soya  inheritance.soya  instance_functions.soya  instance_variable_init.soya  member_assignment.soya
test/torture/basic/types/enums/: relational_ops.soya  values.soya
test/torture/basic/types/function/: call.soya  call_with_instance.soya
test/torture/basic/types/ints/: relational_ops.soya
test/torture/basic/types/structs/: constructors.soya  instance_functions.soya  instance_variable_init.soya  member_assignment.soya
test/unittest/: ModulesRequiredExceptionTest.h  ModulesRequiredExceptionTest.hpp
test/unittest/analysis/: SymbolTableTest.h  SymbolTableTest.hpp
test/unittest/ast/: ArrayCreationExpressionTest.h  ArrayCreationExpressionTest.hpp  ArrayTypeTest.h  ArrayTypeTest.hpp  AssignmentExpressionTest.h  AssignmentExpressionTest.hpp  BlockTest.h  BlockTest.hpp  BooleanLiteralTest.h  BooleanLiteralTest.hpp  BooleanTypeTest.h  BooleanTypeTest.hpp  BuiltInTypeTest.h  BuiltInTypeTest.hpp  CallExpressionTest.h  CallExpressionTest.hpp  CastExpressionTest.h  CastExpressionTest.hpp  CharacterLiteralTest.h  CharacterLiteralTest.hpp  CharacterTypeTest.h  CharacterTypeTest.hpp  ClassTypeTest.h  ClassTypeTest.hpp  CombinedRelationalExpressionTest.h  CombinedRelationalExpressionTest.hpp  CompoundAssignmentExpressionTest.h  CompoundAssignmentExpressionTest.hpp  ConstructorInitializerTest.h  ConstructorInitializerTest.hpp  ConstructorTest.h  ConstructorTest.hpp  DeclarationBlockTest.h  DeclarationBlockTest.hpp  DeclarationStatementTest.h  DeclarationStatementTest.hpp  DeclaredEntityTest.h  DeclaredEntityTest.hpp  DoStatementTest.h  DoStatementTest.hpp  (+144 more)
test/unittest/common/: ProblemTest.h  ProblemTest.hpp
tmp/: test.soya
