set (TEST_SOYAC_SOURCES
  test-soyac.cpp
  ../src/analysis/FunctionGroup.cpp
  ../src/analysis/SymbolTable.cpp
  ../src/ast/ArrayCreationExpression.cpp
  ../src/ast/ArrayType.cpp
  ../src/ast/AssignmentExpression.cpp
  ../src/ast/Block.cpp
  ../src/ast/BooleanLiteral.cpp
  ../src/ast/BooleanType.cpp
  ../src/ast/BuiltInType.cpp
  ../src/ast/CallExpression.cpp
  ../src/ast/CastExpression.cpp
  ../src/ast/CharacterLiteral.cpp
  ../src/ast/CharacterType.cpp
  ../src/ast/ClassType.cpp
  ../src/ast/CombinedRelationalExpression.cpp
  ../src/ast/CompoundAssignmentExpression.cpp
  ../src/ast/Constructor.cpp
  ../src/ast/ConstructorInitializer.cpp
  ../src/ast/DeclarationBlock.cpp
  ../src/ast/DeclarationStatement.cpp
  ../src/ast/DeclaredEntity.cpp
  ../src/ast/DoStatement.cpp
  ../src/ast/EntityImport.cpp
  ../src/ast/EnumConstant.cpp
  ../src/ast/EnumType.cpp
  ../src/ast/EnumValueExpression.cpp
  ../src/ast/Expression.cpp
  ../src/ast/ExpressionStatement.cpp
  ../src/ast/FloatingPointLiteral.cpp
  ../src/ast/FloatingPointType.cpp
  ../src/ast/FloatingPointValue.cpp
  ../src/ast/ForStatement.cpp
  ../src/ast/Function.cpp
  ../src/ast/FunctionGroupImport.cpp
  ../src/ast/FunctionExpression.cpp
  ../src/ast/FunctionParameter.cpp
  ../src/ast/FunctionParameterExpression.cpp
  ../src/ast/FunctionType.cpp
  ../src/ast/IfStatement.cpp
  ../src/ast/Import.cpp
  ../src/ast/InstanceFunctionExpression.cpp
  ../src/ast/InstanceVariableExpression.cpp
  ../src/ast/IntegerLiteral.cpp
  ../src/ast/IntegerType.cpp
  ../src/ast/IntegerValue.cpp
  ../src/ast/Location.cpp
  ../src/ast/LogicalExpression.cpp
  ../src/ast/LogicalNotExpression.cpp
  ../src/ast/Module.cpp
  ../src/ast/ModuleExpression.cpp
  ../src/ast/ModuleImport.cpp
  ../src/ast/Name.cpp
  ../src/ast/NamedEntity.cpp
  ../src/ast/Node.cpp
  ../src/ast/ObjectCreationExpression.cpp
  ../src/ast/Property.cpp
  ../src/ast/PropertyGetAccessor.cpp
  ../src/ast/PropertySetAccessor.cpp
  ../src/ast/ReturnStatement.cpp
  ../src/ast/Statement.cpp
  ../src/ast/StatementWithBody.cpp
  ../src/ast/StructType.cpp
  ../src/ast/ThisExpression.cpp
  ../src/ast/Type.cpp
  ../src/ast/TypeExpression.cpp
  ../src/ast/UnknownArrayType.cpp
  ../src/ast/UnknownFunctionType.cpp
  ../src/ast/UnknownType.cpp
  ../src/ast/UnresolvedBaseConstructorInitializer.cpp
  ../src/ast/UnresolvedBinaryExpression.cpp
  ../src/ast/UnresolvedConstructorInitializer.cpp
  ../src/ast/UnresolvedDefaultConstructorInitializer.cpp
  ../src/ast/UnresolvedElementAccessExpression.cpp
  ../src/ast/UnresolvedEntityImport.cpp
  ../src/ast/UnresolvedFunctionExpression.cpp
  ../src/ast/UnresolvedInstanceFunctionExpression.cpp
  ../src/ast/UnresolvedInstancePropertyExpression.cpp
  ../src/ast/UnresolvedMemberAccessExpression.cpp
  ../src/ast/UnresolvedModuleImport.cpp
  ../src/ast/UnresolvedObjectCreationExpression.cpp
  ../src/ast/UnresolvedSimpleNameExpression.cpp
  ../src/ast/UnresolvedThisExpression.cpp
  ../src/ast/UserDefinedType.cpp
  ../src/ast/Variable.cpp
  ../src/ast/VariableExpression.cpp
  ../src/ast/VoidType.cpp
  ../src/ast/WhileStatement.cpp
  ../src/common/Problem.cpp
)

add_executable (test-soyac ${TEST_SOYAC_SOURCES})
target_link_libraries (test-soyac
  boost_filesystem
  boost_regex
  LLVMSystem
  sigc-2.0
  cppunit
)
