find_package(PkgConfig)
pkg_check_modules(CppUnit REQUIRED IMPORTED_TARGET cppunit)

set(TEST_SOURCES
        test-soyac.cpp
        unittest/analysis/SymbolTableTest.h
        unittest/ModulesRequiredExceptionTest.h
        unittest/common/ProblemTest.h
        unittest/ast/IntegerLiteralTest.h
        unittest/ast/LinkTest.h
        unittest/ast/ThisExpressionTest.h
        unittest/ast/FloatingPointTypeTest.h
        unittest/ast/StatementWithBodyTest.h
        unittest/ast/StatementTest.h
        unittest/ast/DoStatementTest.h
        unittest/ast/FunctionTest.h
        unittest/ast/DeclarationStatementTest.h
        unittest/ast/PropertyGetAccessorTest.h
        unittest/ast/ExpressionStatementTest.h
        unittest/ast/FloatingPointLiteralTest.h
        unittest/ast/InstanceFunctionExpressionTest.h
        unittest/ast/FunctionParameterExpressionTest.h
        unittest/ast/UnresolvedEntityImportTest.h
        unittest/ast/BooleanTypeTest.h
        unittest/ast/UnresolvedInstanceFunctionExpressionTest.h
        unittest/ast/LogicalExpressionTest.h
        unittest/ast/CharacterTypeTest.h
        unittest/ast/NamedEntityTest.h
        unittest/ast/UnresolvedElementAccessExpressionTest.h
        unittest/ast/CompoundAssignmentExpressionTest.h
        unittest/ast/EntityImportTest.h
        unittest/ast/VoidTypeTest.h
        unittest/ast/VariableExpressionTest.h
        unittest/ast/LocationTest.h
        unittest/ast/PropertyAccessorTest.h
        unittest/ast/ClassTypeTest.h
        unittest/ast/CharacterLiteralTest.h
        unittest/ast/EnumConstantTest.h
        unittest/ast/BlockTest.h
        unittest/ast/IfStatementTest.h
        unittest/ast/ConstructorInitializerTest.h
        unittest/ast/UnresolvedConstructorInitializerTest.h
        unittest/ast/FunctionTypeTest.h
        unittest/ast/NodeListTest.h
        unittest/ast/UnresolvedDefaultConstructorInitializerTest.h
        unittest/ast/TypeTest.h
        unittest/ast/BuiltInTypeTest.h
        unittest/ast/FunctionExpressionTest.h
        unittest/ast/ArrayCreationExpressionTest.h
        unittest/ast/AssignmentExpressionTest.h
        unittest/ast/NameTest.h
        unittest/ast/UnresolvedBaseConstructorInitializerTest.h
        unittest/ast/UnknownFunctionTypeTest.h
        unittest/ast/PropertyTest.h
        unittest/ast/EnumTypeTest.h
        unittest/ast/WhileStatementTest.h
        unittest/ast/UnresolvedSimpleNameExpressionTest.h
        unittest/ast/FloatingPointValueTest.h
        unittest/ast/DeclarationBlockTest.h
        unittest/ast/EnumValueExpressionTest.h
        unittest/ast/BooleanLiteralTest.h
        unittest/ast/StructTypeTest.h
        unittest/ast/ModuleTest.h
        unittest/ast/FunctionGroupImportTest.h
        unittest/ast/FunctionParameterTest.h
        unittest/ast/ReturnStatementTest.h
        unittest/ast/UnresolvedInstancePropertyExpressionTest.h
        unittest/ast/DeclaredEntityTest.h
        unittest/ast/ModuleExpressionTest.h
        unittest/ast/ModuleImportTest.h
        unittest/ast/UnknownTypeTest.h
        unittest/ast/PropertySetAccessorTest.h
        unittest/ast/UnresolvedFunctionExpressionTest.h
        unittest/ast/UnresolvedThisExpressionTest.h
        unittest/ast/CombinedRelationalExpressionTest.h
        unittest/ast/ExpressionTest.h
        unittest/ast/LogicalNotExpressionTest.h
        unittest/ast/UnresolvedMemberAccessExpressionTest.h
        unittest/ast/UnknownArrayTypeTest.h
        unittest/ast/IntegerValueTest.h
        unittest/ast/ConstructorTest.h
        unittest/ast/CastExpressionTest.h
        unittest/ast/UnresolvedModuleImportTest.h
        unittest/ast/TypeExpressionTest.h
        unittest/ast/UnresolvedObjectCreationExpressionTest.h
        unittest/ast/ObjectCreationExpressionTest.h
        unittest/ast/ForStatementTest.h
        unittest/ast/IntegerTypeTest.h
        unittest/ast/ArrayTypeTest.h
        unittest/ast/CallExpressionTest.h
        unittest/ast/InstanceVariableExpressionTest.h
        unittest/ast/UnresolvedBinaryExpressionTest.h
        unittest/ast/UserDefinedTypeTest.h
        unittest/ast/NodeTest.h
        unittest/ast/VariableTest.h
)

set(TORTURE_TESTS
        torture/basic/types/enums/relational_ops.soya
        torture/basic/types/enums/values.soya
        torture/basic/types/function/call.soya
        torture/basic/types/function/call_with_instance.soya
        torture/basic/types/structs/instance_variable_init.soya
        torture/basic/types/structs/constructors.soya
        torture/basic/types/structs/member_assignment.soya
        torture/basic/types/structs/instance_functions.soya
        torture/basic/types/arrays/init.soya
        torture/basic/types/arrays/element_assignment.soya
        torture/basic/types/arrays/length.soya
        torture/basic/types/class/inheritance.soya
        torture/basic/types/class/instance_variable_init.soya
        torture/basic/types/class/constructors.soya
        torture/basic/types/class/member_assignment.soya
        torture/basic/types/class/instance_functions.soya
        torture/basic/types/ints/relational_ops.soya
        torture/basic/conversions/int_to_float.soya
        torture/basic/conversions/int_to_int.soya
        torture/basic/conversions/float_to_float.soya
        torture/basic/conversions/float_to_int.soya
        torture/basic/empty.soya
        torture/basic/statements/do.soya
        torture/basic/statements/for.soya
        torture/basic/statements/while.soya
        torture/basic/statements/if_dangling_else.soya
        torture/basic/properties/struct_instance_properties.soya
        torture/basic/expressions/assignment.soya
        torture/basic/expressions/compound_assignment.soya
        torture/basic/expressions/logical_ops.soya
        torture/basic/functions/arguments.soya
        torture/basic/functions/struct_return_values.soya
        torture/basic/functions/global_var_access.soya
        torture/basic/functions/return_values.soya
        torture/basic/functions/struct_arguments.soya
        torture/basic/block_scope.soya
        torture/basic/modules/static_module_imports.soya
        torture/basic/modules/entity_imports.soya
        torture/basic/modules/module_imports.soya
        torture/basic/modules/samples/foo.soya
        torture/basic/modules/samples/bar.soya
)

foreach(FILE IN LISTS TORTURE_TESTS)
    configure_file(${FILE} ${FILE} COPYONLY)
endforeach()

add_executable(test-soyac ${TEST_SOURCES})
target_link_libraries(test-soyac PRIVATE soya-compiler Boost::filesystem PkgConfig::CppUnit)
add_dependencies(test-soyac soyac sr)